--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FunctionActivity">
-          
-        </activity>
+        <activity android:name=".activity.FunctionActivity" />
+        <activity android:name=".activity.NewsContentActivity"></activity>
     </application>
 
 </manifest>
